--- a/index.html
+++ b/index.html
@@ -18,9 +18,69 @@
         </nav>
     </header>
     <main>
-        <p>You can find here a delicious Selimon Cookies!</p>
+        <h1>You can find here a delicious Selimon Cookies!</h1>
+        <h1>Locations of us:</h1>
+        <h2>Seattle</h2>
+        <ul>
+            <li>Location: Washington, Seattle.</li>
+            <li>Open Hours: 6AM - 8PM</li>
+            <li>Contant Info: +206 123456789</li>
+        </ul>
+
+        <h2>Tokyo</h2>
+        <ul>
+            <li>Location: Japan, Tokyo.</li>
+            <li>Open Hours: 6AM - 8PM</li>
+            <li>Contant Info: +090 123456789</li>
+        </ul>
+
+        <h2>Dubai</h2>
+        <ul>
+            <li>Location: United Arb Emirates, Dubai.</li>
+            <li>Open Hours: 6AM - 8PM</li>
+            <li>Contant Info: +971 123456789</li>
+        </ul>
+
+        <h2>Paris</h2>
+        <ul>
+            <li>Location: France, Paris.</li>
+            <li>Open Hours: 6AM - 8PM</li>
+            <li>Contant Info: +33 123456789</li>
+        </ul>
+
+        <h2>Lima</h2>
+        <ul>
+            <li>Location: Peru, Lima.</li>
+            <li>Open Hours: 6AM - 8PM</li>
+            <li>Contant Info: +567 123456789/ +419 123456789</li>
+        </ul>  
+
+        <div id="div1">
+            <h2>How we create our delicious cookies:</h2>
+            <p>It is very simple, we use our magic recipe and for the shape of the cookie, we use this cutter:</p>
+            <img src="images/cutter.jpeg" alt="cutter">
+        </div>
+
+
+        <div id="div2">
+            <h2>Shapes of our cookies:</h2>
+            <img src="images/fish.jpg" alt="shape1">
+            <img src="images/frosted-cookie.jpg" alt="shape2">
+        </div>
+
+        <div id="div3">
+            <h2>Feedback from our customers:</h2>
+            <p>"We are so happy to have a good cookies shop like this.<br>
+            It is cheap, delicious and amzing.<br>
+            The most beautiful thing that you can find amazing shapes for cookies."</p>
+            <img src="images/family.jpg" alt="family">
+        </div>
+
+
+    
     </main>
     <footer>
+        <img src="images/chinook.jpg" alt="logo">
         <p>Copyrights are reserved</p>
     </footer>
 </body>
