--- a/sales.html
+++ b/sales.html
@@ -21,6 +21,7 @@
         
     </main>
     <footer>
+        <img src="images/chinook.jpg" alt="logo">
         <p>Copyrights are reserved</p>
     </footer>
    <script src="js/app.js"></script> 
